--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "version": "3.9.0"
   },
   "scripts": {
-    "deploy": "git add .;git commit --amend --no-edit; git push -f;hexo generate;hexo deploy;"
+    "deploy": "git add .;git commit -m 'reserve git log'; git push;hexo generate;hexo deploy;"
   },
   "dependencies": {
     "hexo": "^3.9.0",
